# plotnine-prism

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build.yml  docs.yml
CHANGELOG/: index.html
api/plotnine_prism/: index.html
api/plotnine_prism.guide/: index.html
api/plotnine_prism.pal/: index.html
api/plotnine_prism.scale/: index.html
api/plotnine_prism.theme/: index.html
api/plotnine_prism.themeable/: index.html
api/source/plotnine_prism/: index.html
api/source/plotnine_prism.guide/: index.html
api/source/plotnine_prism.pal/: index.html
api/source/plotnine_prism.scale/: index.html
api/source/plotnine_prism.theme/: index.html
api/source/plotnine_prism.themeable/: index.html
docs/: CHANGELOG.md  requirements.txt
examples/: README.ipynb  axes.ipynb  colours.ipynb  ex1-dose.ipynb  get_started.ipynb  nb_helpers.py  themes.ipynb
plotnine_prism/: __init__.py  guide.py  pal.py  scale.py  theme.py  themeable.py
plotnine_prism/schemes/: _color_palettes.toml  _fill_palettes.toml  _shape_palettes.toml  autumn_leaves.toml  beer_and_ales.toml  black_and_white.toml  blueprint.toml  candy_bright.toml  candy_soft.toml  colorblind_safe.toml  colors.toml  diazo.toml  earth_tones.toml  evergreen.toml  fir.toml  flames.toml  floral.toml  greenwash.toml  inferno.toml  magma.toml  mustard_field.toml  muted_rainbow.toml  neon.toml  ocean.toml  office.toml  pastels.toml  pearl.toml  plasma.toml  prism_dark.toml  prism_light.toml  purple_passion.toml  quiet.toml  shades_of_gray.toml  spring.toml  stained_glass.toml  starry.toml  summer.toml  sunny_garden.toml  the_blues.toml  viridis.toml  (+6 more)
raw/: index.html
raw/axes/: index.html
raw/colours/: index.html
raw/ex1-dose/: index.html
raw/get_started/: index.html
raw/themes/: index.html
search/: search_index.json
