[tool.poetry]
name = "plotnine-prism"
version = "0.2.0"
description = "Prism themes for plotnine, inspired by ggprism"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "GNU General Public License v2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
plotnine = "^0.10"
rtoml = "^0.8"
diot = "^0.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6"
datar = {version = "^0.11", extras = ["pandas"]}
patchworklib = "^0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv --cov-config=.coveragerc --cov=plotnine_prism --cov-report xml:cov.xml --cov-report term-missing"
filterwarnings = [
    "error"
]
console_output_style = "progress"
junit_family = "xunit1"

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
