[tool.poetry]
name = "plotnine-prism"
version = "0.3.2"
description = "Prism themes for plotnine, inspired by ggprism"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "GNU General Public License v2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
plotnine = "^0.12"
diot = {version = "^0.3", extras = ["toml"]}

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
jinja2 = "^3.1.6"
mkdocs-material = "^9.6.9"
pymdown-extensions = "^10.14.3"
mkapi-fix = "^0.1.1"
mknotebooks = "^0.8.0"
pygments = "^2.19.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
datar = {version = "^0.15", extras = ["pandas"]}
patchworklib = "^0.6 <0.6.5"
scipy = [
    {version = "^1.10.0", markers = "python_version < '3.10'"},
    {version = "^1.11.1", markers = "python_version >= '3.10'"}
]
setuptools = {version = "^78", markers = "python_version >= '3.9'"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv --cov-config=.coveragerc --cov=plotnine_prism --cov-report xml:cov.xml --cov-report term-missing"
filterwarnings = [
    "error"
]
console_output_style = "progress"
junit_family = "xunit1"

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
